# Sudoku-Solver

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/gui/: boardView.cpp  boardView.h  button.cpp  button.h  controller.cpp  controller.h  grid.cpp  grid.h  infoPanel.cpp  infoPanel.h  navbar.cpp  navbar.h  resource.cpp  resource.h  tile.cpp  tile.h
src/logic/: board.cpp  board.h  generators.cpp  generators.h  solver.cpp  solver.h
